[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Enrich2"
dynamic = ["version"]
description = "Analysis program for calculating variant scores from deep mutational scanning data."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Alan F Rubin", email = "alan.rubin@wehi.edu.au" },
]
dependencies = [
    "fqfa",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "tables",
]

[project.scripts]
enrich_cmd = "enrich2.main:main_cmd"

[project.gui-scripts]
enrich_gui = "enrich2.main:main_gui"

[project.urls]
Homepage = "https://github.com/FowlerLab/Enrich2/"

[tool.hatch.version]
path = "enrich2/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/enrich2",
    "/docs",
]
